--- a/Src/DotAmf/DotAmf.csproj
+++ b/Src/DotAmf/DotAmf.csproj
@@ -40,19 +40,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\Amf0TypeMarker.cs" />
-    <Compile Include="Data\Amf0Types.cs" />
+    <Compile Include="Data\AmfTypes.cs" />
     <Compile Include="Data\Amf3TypeMarker.cs" />
-    <Compile Include="Data\Amf3Types.cs" />
     <Compile Include="Data\AmfHeader.cs" />
     <Compile Include="Data\AmfPacket.cs" />
     <Compile Include="Data\AmfVersion.cs" />
     <Compile Include="Data\AmfMessage.cs" />
     <Compile Include="IO\AmfStreamWriter.cs" />
-    <Compile Include="Serialization\Amf3Deserializer.cs" />
     <Compile Include="IO\AmfStreamReader.cs" />
+    <Compile Include="IO\ByteConverter.cs" />
+    <Compile Include="Serialization\AmfDeserializerBase.cs" />
     <Compile Include="Serialization\AmfReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\Amf0Deserializer.cs" />
+    <Compile Include="Serialization\Amf3Deserializer.cs" />
+    <Compile Include="Serialization\ContextSwitchEvent.cs" />
     <Compile Include="Serialization\IAmfDeserializer.cs" />
   </ItemGroup>
   <ItemGroup>
