--- a/Src/DotAmf.Wcf/DotAmf.Wcf.csproj
+++ b/Src/DotAmf.Wcf/DotAmf.Wcf.csproj
@@ -5,14 +5,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{DBF8762E-17D7-4AAE-9F06-133DE9870FBC}</ProjectGuid>
+    <ProjectGuid>{7F1303A6-9994-490E-B6B3-BDC5113281EE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DotAmf</RootNamespace>
-    <AssemblyName>DotAmf</AssemblyName>
+    <RootNamespace>DotAmf.Wcf</RootNamespace>
+    <AssemblyName>DotAmf.Wcf</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,38 +32,26 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Web" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\Amf0TypeMarker.cs" />
-    <Compile Include="Data\AmfTypes.cs" />
-    <Compile Include="Data\Amf3TypeMarker.cs" />
-    <Compile Include="Data\AmfHeader.cs" />
-    <Compile Include="Data\AmfPacket.cs" />
-    <Compile Include="Data\AmfVersion.cs" />
-    <Compile Include="Data\AmfMessage.cs" />
-    <Compile Include="IO\AmfStreamWriter.cs" />
-    <Compile Include="IO\AmfStreamReader.cs" />
-    <Compile Include="IO\ByteConverter.cs" />
-    <Compile Include="Serialization\Amf0Serializer.cs" />
-    <Compile Include="Serialization\AmfDeserializerBase.cs" />
-    <Compile Include="Serialization\AmfPacketReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Serialization\Amf0Deserializer.cs" />
-    <Compile Include="Serialization\Amf3Deserializer.cs" />
-    <Compile Include="Serialization\ClassAliasUtil.cs" />
-    <Compile Include="Serialization\ContextSwitchEvent.cs" />
-    <Compile Include="Serialization\AmfSerializerBase.cs" />
-    <Compile Include="Serialization\Amf3Serializer.cs" />
-    <Compile Include="Serialization\AmfPacketWriter.cs" />
-    <Compile Include="Serialization\IAmfSerializer.cs" />
-    <Compile Include="Serialization\IAmfDeserializer.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\DotAmf\DotAmf.csproj">
+      <Project>{DBF8762E-17D7-4AAE-9F06-133DE9870FBC}</Project>
+      <Name>DotAmf</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
