--- a/Src/DotAmf/DotAmf.csproj
+++ b/Src/DotAmf/DotAmf.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\Amf0Deserializer.cs" />
     <Compile Include="Serialization\Amf3Deserializer.cs" />
+    <Compile Include="Serialization\AmfSerializationContext.cs" />
     <Compile Include="Serialization\ContextSwitchEvent.cs" />
     <Compile Include="Serialization\AmfSerializerBase.cs" />
     <Compile Include="Serialization\Amf3Serializer.cs" />
