Added AMF data contracts resolver.

--- a/Src/DotAmf/DotAmf.csproj
+++ b/Src/DotAmf/DotAmf.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\Amf0TypeMarker.cs" />
+    <Compile Include="Serialization\AmfContractResolver.cs" />
     <Compile Include="Data\AmfTypes.cs" />
     <Compile Include="Data\Amf3TypeMarker.cs" />
     <Compile Include="Data\AmfHeader.cs" />
