Experimental AMF3 data contract deserializer.

--- a/Src/DotAmf/DotAmf.csproj
+++ b/Src/DotAmf/DotAmf.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Serialization\AmfPacketWriter.cs" />
     <Compile Include="Serialization\IAmfSerializer.cs" />
     <Compile Include="Serialization\IAmfDeserializer.cs" />
+    <Compile Include="Serialization\TypeUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Errors.resx">
