--- a/Src/DotAmf.Wcf/DotAmf.Wcf.csproj
+++ b/Src/DotAmf.Wcf/DotAmf.Wcf.csproj
@@ -46,8 +46,10 @@
   <ItemGroup>
     <Compile Include="Channels\Messages\AmfBatchMessage.cs" />
     <Compile Include="Channels\Messages\AmfMessageBase.cs" />
+    <Compile Include="Configuration\AmfEndpointCapabilities.cs" />
     <Compile Include="Description\AmfOperationBehavior.cs" />
     <Compile Include="Dispatcher\AmfEndpointContext.cs" />
+    <Compile Include="Dispatcher\AmfErrorHandler.cs" />
     <Compile Include="Dispatcher\AmfMessageFilter.cs" />
     <Compile Include="Dispatcher\AmfMessageInspector.cs" />
     <Compile Include="Dispatcher\AmfOperationInvoker.cs" />
@@ -76,7 +78,6 @@
     <Compile Include="Dispatcher\AmfDispatchOperationSelector.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Dispatcher\AmfGenericOperationInvoker.cs" />
     <Compile Include="Dispatcher\AmfGenericOperationFormatter.cs" />
     <Compile Include="Dispatcher\AmfOperationUtil.cs" />
     <Compile Include="Dispatcher\AmfCommandFormatter.cs" />
@@ -89,6 +90,7 @@
     <Compile Include="Messaging\AbstractMessage.cs" />
     <Compile Include="Messaging\AcknowledgeMessage.cs" />
     <Compile Include="Messaging\CommandMessage.cs" />
+    <Compile Include="Messaging\ErrorMessage.cs" />
     <Compile Include="Messaging\MessagingHeaders.cs" />
     <Compile Include="Messaging\RemotingMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
