--- a/Examples/ExampleService/ExampleService.csproj
+++ b/Examples/ExampleService/ExampleService.csproj
@@ -63,7 +63,9 @@
     <Content Include="Default.htm" />
     <Content Include="MyService.svc" />
     <Content Include="swfobject.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MyService.svc.cs">
