--- a/Tests/DotAmf/DotAmf.csproj
+++ b/Tests/DotAmf/DotAmf.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DotAmf</RootNamespace>
     <AssemblyName>DotAmf.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -20,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -28,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="nunit.framework, Version=2.6.2.12296, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
@@ -62,12 +65,6 @@
     <EmbeddedResource Include="Samples\String1.amfx" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Src\DotAmf\DotAmf.csproj">
-      <Project>{dbf8762e-17d7-4aae-9f06-133de9870fbc}</Project>
-      <Name>DotAmf</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="packages.config" />
     <EmbeddedResource Include="Samples\StringEmpty.amfx" />
     <EmbeddedResource Include="Samples\StringEmpty.amf" />
@@ -91,6 +88,12 @@
     <EmbeddedResource Include="Samples\ArrayReference.amf" />
     <EmbeddedResource Include="Samples\Integer5.amfx" />
     <EmbeddedResource Include="Samples\Integer5.amf" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Src\DotAmf\DotAmf.csproj">
+      <Project>{c98b985d-3faa-4827-84aa-85b0f3b91c46}</Project>
+      <Name>DotAmf</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
