--- a/Examples/ExampleService/Web.config
+++ b/Examples/ExampleService/Web.config
@@ -1,7 +1,16 @@
 ﻿<?xml version="1.0"?>
 <configuration>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
+    <compilation debug="true" targetFramework="4.5"/>
+    <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
   <system.serviceModel>
     <extensions>
@@ -40,7 +49,7 @@
     </services>
     <serviceHostingEnvironment multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
- <system.webServer>
+  <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
     <directoryBrowse enabled="false"/>
   </system.webServer>
